# Lab3_B

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/: Printed_Circuit_Board.cpp  Printed_Circuit_Board.h
test/: CMakeLists.txt  test.cpp
